# cpp-barebone

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  flake.nix
src/: CMakeLists.txt  main.cxx
third-parties/: .clang-tidy
